--- a/page2/index.html
+++ b/page2/index.html
@@ -17,7 +17,7 @@
     0-60 in ten weeks at CustomInk’s eCommerce Technology Department
   
   Going from 0 to ...">
-  <link rel="stylesheet" href="/assets/app-1194ecb864aba9ff3f0df0c1cfb23fa5.css">
+  <link rel="stylesheet" href="/assets/app.css">
   <script type="text/javascript">
   (function(d) {
     var config = {
@@ -34,7 +34,7 @@
     <header class="tb-Header">
   <div class="sb-Wrapper">
     <nav class="tb-Header-home">
-      <a href="/" class="tb-Header-home-logo"><img src="/assets/CustomInk_Tech_Color-1eab0e8af4627b0a8eb96649c8ab2274.png"></a>
+      <a href="/" class="tb-Header-home-logo"><img src="/assets/CustomInk_Tech_Color.png"></a>
     </nav>
     <input type="checkbox" id="tb-Header-toggle" />
     <div class="tb-Header-area">
@@ -206,19 +206,7 @@ awareness.
 </div>
 
     
-  <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-32456448-1']);
-    _gaq.push(['_trackPageview']);
 
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
-
-
-    <script src="/assets/app-ca69057f0a3c7907fba6689b1396c0dd.js"></script>
+    <script src="/assets/app.js"></script>
   </body>
 </html>
