--- a/page3/index.html
+++ b/page3/index.html
@@ -19,7 +19,7 @@
   
 
 Jonathan joins CustomInk from William &amp; Mary where...">
-  <link rel="stylesheet" href="/assets/app.css">
+  <link rel="stylesheet" href="/assets/app-1194ecb864aba9ff3f0df0c1cfb23fa5.css">
   <script type="text/javascript">
   (function(d) {
     var config = {
@@ -36,7 +36,7 @@ Jonathan joins CustomInk from William &amp; Mary where...">
     <header class="tb-Header">
   <div class="sb-Wrapper">
     <nav class="tb-Header-home">
-      <a href="/" class="tb-Header-home-logo"><img src="/assets/CustomInk_Tech_Color.png"></a>
+      <a href="/" class="tb-Header-home-logo"><img src="/assets/CustomInk_Tech_Color-1eab0e8af4627b0a8eb96649c8ab2274.png"></a>
     </nav>
     <input type="checkbox" id="tb-Header-toggle" />
     <div class="tb-Header-area">
@@ -207,7 +207,19 @@ Lisa joins CustomInk as a software engineer. She recently completed integrating 
 </div>
 
     
+  <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-32456448-1']);
+    _gaq.push(['_trackPageview']);
 
-    <script src="/assets/app.js"></script>
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  </script>
+
+
+    <script src="/assets/app-ca69057f0a3c7907fba6689b1396c0dd.js"></script>
   </body>
 </html>
