Fix author name
From: fbafefa10b6e901a5848d26c8526dd8460f8b6fc

--- a/page3/index.html
+++ b/page3/index.html
@@ -23,8 +23,8 @@
   
 
 Hunter joins CustomInk for the summer...">
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="http:///feed.xml" />
-  <link rel="stylesheet" href="/assets/app.css">
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="http://technology.customink.com/feed.xml" />
+  <link rel="stylesheet" href="/assets/app-b651f92cdaf3b55ddcf369818f306fa8.css">
   <script type="text/javascript">
   (function(d) {
     var config = {
@@ -36,15 +36,13 @@ Hunter joins CustomInk for the summer...">
 </script>
 
   
-  <script src="http://localhost:35729/livereload.js?snipver=1"></script>
-  
 </head>
 
   <body class="tb-Home">
     <header class="tb-Header">
   <div class="sb-Wrapper">
     <nav class="tb-Header-home">
-      <a href="/" class="tb-Header-home-logo"><img src="/assets/CustomInk_Tech_Color.png"></a>
+      <a href="/" class="tb-Header-home-logo"><img src="/assets/CustomInk_Tech_Color-1eab0e8af4627b0a8eb96649c8ab2274.png"></a>
     </nav>
     <input type="checkbox" id="tb-Header-toggle" />
     <div class="tb-Header-area">
@@ -250,7 +248,19 @@ Jonathan joins CustomInk from William &amp; Mary where he  studied Computer Scie
 </div>
 
     
+  <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-32456448-1']);
+    _gaq.push(['_trackPageview']);
 
-    <script src="/assets/app.js"></script>
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  </script>
+
+
+    <script src="/assets/app-ca69057f0a3c7907fba6689b1396c0dd.js"></script>
   </body>
 </html>
