--- a/page3/index.html
+++ b/page3/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <meta name="description" content="A blog by the CustomInk Technology Team providing technical conent for the Ruby, Rails, JavaScript, and Sass communities.">
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="http://technology.customink.com/feed.xml" />
-  <link rel="stylesheet" href="/assets/app-c8107c6a6d6ccb2825cda0df6e904aa6.css">
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="http:///feed.xml" />
+  <link rel="stylesheet" href="/assets/app.css">
   <script type="text/javascript">
   (function(d) {
     var config = {
@@ -20,13 +20,15 @@
 </script>
 
   
+  <script src="http://localhost:35729/livereload.js?snipver=1"></script>
+  
 </head>
 
   <body class="tb-Home">
     <header class="tb-Header">
   <div class="sb-Wrapper">
     <nav class="tb-Header-home">
-      <a href="/" class="tb-Header-home-logo"><img src="/assets/CustomInk_Tech_Color-58757c9eae4e383b5761a73d95df2341.png"></a>
+      <a href="/" class="tb-Header-home-logo"><img src="/assets/CustomInk_Tech_Color.png"></a>
     </nav>
     <input type="checkbox" id="tb-Header-toggle" />
     <div class="tb-Header-area">
@@ -226,19 +228,7 @@ As a rising senior at Carnegie Mellon Unviersity, Anthony joins CustomInk Tech f
 </div>
 
     
-  <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-32456448-1']);
-    _gaq.push(['_trackPageview']);
 
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
-
-
-    <script src="/assets/app-0e8c01ca6abedebdcee8ba6245646e4c.js"></script>
+    <script src="/assets/app.js"></script>
   </body>
 </html>
