Use HTTPS for gravatars.

--- a/team/index.html
+++ b/team/index.html
@@ -66,7 +66,7 @@
       <div class="tb-Author">
   
     <div class="tb-Author-gravatar">
-      <img title="Miranda Wang" src="http://www.gravatar.com/avatar/b187b2b7ab47955a195b68f62ee6dae4?s=150"/>
+      <img title="Miranda Wang" src="https://www.gravatar.com/avatar/b187b2b7ab47955a195b68f62ee6dae4?s=150"/>
     </div>
   
   <div class="tb-Author-info">
@@ -101,7 +101,7 @@
       <div class="tb-Author">
   
     <div class="tb-Author-gravatar">
-      <img title="Hunter Madison" src="http://www.gravatar.com/avatar/783bb0bb05dd4d4485b4707c0bf3854a?s=150"/>
+      <img title="Hunter Madison" src="https://www.gravatar.com/avatar/783bb0bb05dd4d4485b4707c0bf3854a?s=150"/>
     </div>
   
   <div class="tb-Author-info">
@@ -136,7 +136,7 @@
       <div class="tb-Author">
   
     <div class="tb-Author-gravatar">
-      <img title="Ken Collins" src="http://www.gravatar.com/avatar/0a4a62376a54055b727fca8fa0442c3d?s=150"/>
+      <img title="Ken Collins" src="https://www.gravatar.com/avatar/0a4a62376a54055b727fca8fa0442c3d?s=150"/>
     </div>
   
   <div class="tb-Author-info">
@@ -175,7 +175,7 @@
       <div class="tb-Author">
   
     <div class="tb-Author-gravatar">
-      <img title="Chris Mar" src="http://www.gravatar.com/avatar/7c9f4c37280d4cf26f9bda785478a09a?s=150"/>
+      <img title="Chris Mar" src="https://www.gravatar.com/avatar/7c9f4c37280d4cf26f9bda785478a09a?s=150"/>
     </div>
   
   <div class="tb-Author-info">
@@ -210,7 +210,7 @@
       <div class="tb-Author">
   
     <div class="tb-Author-gravatar">
-      <img title="Dan Drinkard" src="http://www.gravatar.com/avatar/3bc10ad50945fe09663dd62218512299?s=150"/>
+      <img title="Dan Drinkard" src="https://www.gravatar.com/avatar/3bc10ad50945fe09663dd62218512299?s=150"/>
     </div>
   
   <div class="tb-Author-info">
@@ -245,7 +245,7 @@
       <div class="tb-Author">
   
     <div class="tb-Author-gravatar">
-      <img title="John Peterson" src="http://www.gravatar.com/avatar/fda84d4db2e66f4ff7cf616b7cee09b2?s=150"/>
+      <img title="John Peterson" src="https://www.gravatar.com/avatar/fda84d4db2e66f4ff7cf616b7cee09b2?s=150"/>
     </div>
   
   <div class="tb-Author-info">
@@ -280,7 +280,7 @@
       <div class="tb-Author">
   
     <div class="tb-Author-gravatar">
-      <img title="Karle Durante" src="http://www.gravatar.com/avatar/ccaeb0336801e0015145ad901d879377?s=150"/>
+      <img title="Karle Durante" src="https://www.gravatar.com/avatar/ccaeb0336801e0015145ad901d879377?s=150"/>
     </div>
   
   <div class="tb-Author-info">
@@ -315,7 +315,7 @@
       <div class="tb-Author">
   
     <div class="tb-Author-gravatar">
-      <img title="Dan Hensgen" src="http://www.gravatar.com/avatar/579d7112daaab59bed30404a16805693?s=150"/>
+      <img title="Dan Hensgen" src="https://www.gravatar.com/avatar/579d7112daaab59bed30404a16805693?s=150"/>
     </div>
   
   <div class="tb-Author-info">
@@ -350,7 +350,7 @@
       <div class="tb-Author">
   
     <div class="tb-Author-gravatar">
-      <img title="Ryan Billings" src="http://www.gravatar.com/avatar/bf4516f0bcb00c2d7eb866a9bb05aea0?s=150"/>
+      <img title="Ryan Billings" src="https://www.gravatar.com/avatar/bf4516f0bcb00c2d7eb866a9bb05aea0?s=150"/>
     </div>
   
   <div class="tb-Author-info">
@@ -381,7 +381,7 @@
       <div class="tb-Author">
   
     <div class="tb-Author-gravatar">
-      <img title="Daniel Wheeler" src="http://www.gravatar.com/avatar/b9b5f815d09f6c5ca13d606a72503afc?s=150"/>
+      <img title="Daniel Wheeler" src="https://www.gravatar.com/avatar/b9b5f815d09f6c5ca13d606a72503afc?s=150"/>
     </div>
   
   <div class="tb-Author-info">
@@ -412,7 +412,7 @@
       <div class="tb-Author">
   
     <div class="tb-Author-gravatar">
-      <img title="Tien Nguyen" src="http://www.gravatar.com/avatar/ac278aab807cdeacae2a3de708ff428c?s=150"/>
+      <img title="Tien Nguyen" src="https://www.gravatar.com/avatar/ac278aab807cdeacae2a3de708ff428c?s=150"/>
     </div>
   
   <div class="tb-Author-info">
